add serialize on controllers
